Update - Data Access Object for Users.
- Get all limit method added (gets all users within the row limit)
- Get all paged method added (gets all users within a given page and a given page limit)